<resources>
    <string name="app_name">Aplicacion Musica XD</string>
    <string name="btn_aleatorio">Aleatorio</string>
    <string name="btn_favoritos">Favoritos</string>
    <string name="btn_listas">Listas</string>
    <string name="txt_canciones_totales">Canciónes Totales:</string>
    <string name="txt_mundo_de_canciones">Mundo De Canciones</string>
    <string name="txt_nombre_cancion">Nombre Canción</string>
    <string name="btn_regresar">Regresar</string>
    <string name="tv_inicio">00:00</string>
    <string name="tv_finalizar">Cargando..</string>
    <string name="txt_repetir">Repetir</string>
    <string name="txt_ecualizador">Ecualizador</string>
    <string name="txt_temporizador">Temporizador</string>
    <string name="txt_compartir">Compartir</string>
    <string name="txt_abierto">Abierto</string>
    <string name="txt_cerrado">Cerrado</string>
    <string name="ic_aplicacion">Icono</string>
    <string name="txt_Bienvenido">Bienvenido a Repro. \nde musica, XD.</string>
    <string name="txt_foro">Foro</string>
    <string name="txt_ajustes">Ajustes</string>
    <string name="txt_acerca_de">Acerca de</string>
    <string name="txt_salir">Salir</string>
    <string name="txt_album_cancion">Album de la canción</string>
</resources>