<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaDeReproduccion"
    android:orientation="vertical"
    android:gravity="center">

<!--    primera fila-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:tint="@color/black"
            tools:ignore="UseAppTint"
            android:contentDescription="@string/btn_regresar" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/txt_canciones_totales"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorito_vacio"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            android:tint="@android:color/holo_red_dark"
            tools:ignore="UseAppTint"
            android:contentDescription="@string/btn_favoritos"
            />

    </LinearLayout>

<!--    imagen de la canción actual-->
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/reproductor_musica_splash_screen"
        app:shapeAppearanceOverlay="@style/curva"
        app:strokeColor="@color/Azul_perzonalizado"
        app:strokeWidth="5dp"
        />

<!--    nombre de la canción actual-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:text="@string/txt_nombre_cancion"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_anterior"
            app:iconSize="40dp"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pausa"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curva"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_siguiente"
            app:iconSize="40dp"
            />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/tv_inicio"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/tv_finalizar"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>