<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


<!--            Para botones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            Boton para aleatorio-->
            <Button
                android:id="@+id/botonAleatorio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_aleatorio"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_aleatorio"
                android:text="@string/btn_aleatorio"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"/>

<!--            Boton para favoritos-->
            <Button
                android:id="@+id/botonFavoritos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_favoritos"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_favoritos"
                android:text="@string/btn_favoritos"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"/>

<!--            Boton para listas-->
            <Button
                android:id="@+id/botonListas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_listas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_listas"
                android:text="@string/btn_listas"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"/>
        </LinearLayout>

<!--        Seccion para mostrar total de canciones-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_canciones_totales"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textStyle="bold"/>

<!--        Seccion para la lista de canciones-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        />

</androidx.drawerlayout.widget.DrawerLayout>